directiva- ElementRef - DOM

--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,3 +1,11 @@
-<p>
-  inicio works!
-</p>
+<div class="container-fluid">
+  <div class=" jumbotron my-5">
+    <h1 class="display-4">{{ title | uppercase }}</h1>
+    <p class="lead">Subtitle</p>
+    <hr class="my-4">
+    <p Inicio>Content Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt mole
+      stiae voluptatum iste aspernatur ducimus adipisci beatae eos magni maxime ab numquam
+      alias pariatur, quos dolore a, voluptatibus repellendus fugit esse.
+    </p>
+  </div>
+</div>
