--- a/src/app/pages/clientes/clientes.component.html
+++ b/src/app/pages/clientes/clientes.component.html
@@ -1,55 +1,52 @@
-
-
 <div class="clearfix fixed-bottom" *ngIf="mensaje">
-	<div class="alert alert-success alert-dismissible fade show col-4 float-right" role="alert">
-  <strong>{{mjs}}</strong> 
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
+  <div class="alert alert-success alert-dismissible fade show col-4 float-right" role="alert">
+    <strong>{{mjs}}</strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 </div>
 
 <div class=" clearfix" *ngIf="mensajes">
-	<div class="alert alert-danger alert-dismissible fade show col-4 float-right" role="alert">
-  <strong>{{mjs}}</strong> 
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
+  <div class="alert alert-danger alert-dismissible fade show col-4 float-right" role="alert">
+    <strong>{{mjs}}</strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 </div>
 
 
 
 
 <div class="container py-5">
-	<div class="row  d-flex justify-content-between">
-		<div class="col-6 ">
-			<img class="  img-fluid w-75 " src="../../assets/user.png" alt="user">
-		</div>
+  <div class="row  d-flex justify-content-between">
+    <div class="col-6 ">
+      <img class="  img-fluid w-75 " src="../../assets/user.png" alt="user">
+    </div>
 
-		<div>
-			<h2 class="display-4">Crear usuarios</h2>
-			<form class="form py-5 ">
+    <div>
+      <h2 class="display-4">Crear usuarios</h2>
+      <form class="form py-5 ">
 
-				<div class="form-group">
-					<label for="name" class=" text-white control-label">Nombre</label>
-					<input type="text" name="name" id="name" 
-					[(ngModel)]="model.name" placeholder="nombre" class="form-control">
-				</div>
+        <div class="form-group">
+          <label for="name" class=" text-white control-label">Nombre</label>
+          <input type="text" name="name" id="name" [(ngModel)]="model.name" placeholder="nombre" class="form-control">
+        </div>
 
-				<div class="form-group">
-					<label for="apellidos" class=" text-white control-label">Apellidos</label>
-					<input type="text" name="apellidos" id="apellidos" 
-					[(ngModel)]="model.apellidos" placeholder="apellidos"class="form-control" >
-				</div>
+        <div class="form-group">
+          <label for="apellidos" class=" text-white control-label">Apellidos</label>
+          <input type="text" name="apellidos" id="apellidos" [(ngModel)]="model.apellidos" placeholder="apellidos"
+            class="form-control">
+        </div>
 
-				<div class="form-group">
-					<button type="submit" (click)="createEmpleado()" class="btn btn-info btn-block">enviar</button>
-				</div>
+        <div class="form-group">
+          <button type="submit" (click)="createEmpleado()" class="btn btn-info btn-block">enviar</button>
+        </div>
 
-			</form > 
-		</div>
-	</div>
+      </form>
+    </div>
+  </div>
 </div>
 
 
@@ -62,66 +59,68 @@
 
 
 <div class="container">
-	<div class="row ">
-	
-
-		<div clas="col-6 "> 
-			<div class="pl-5">
-					<h2 class="display-4 pb-5">Clientes Registrados</h2>
-				<table  class="table table-bordered ">
-					<thead >
-						<tr>
-							<th>Nombre</th>
-							<th>Apellidos</th>
-							<th>Acciones</th>
-
-						</tr>
-					</thead>
-					<tbody>
-						<tr *ngFor="let Empleado of Empleados; let i =index ">
-							<td>{{Empleado.name}}</td>
-							<td>{{Empleado.apellidos}}</td>
-							<td class="clearfix">
-								<a  type="button" class="btn btn-outline-primary float-left" (click)="editEmpleado(i)" ><i class="fas fa-upload"></i></a>
-								<a  type="button" class="btn btn-outline-danger float-right" (click)="deleEmpleado(i)"><i class="fas fa-trash-alt"></i></a>
-
-							</td>
-						</tr>
-					</tbody>
-				</table>
-
-		    </div>
-		</div>
+  <div class="row ">
 
 
-		<div class=" col-6 x-5 ">
-			<div class="" [hidden]="ocultarActu">
-					<h2 class="display-4 pb-5 text-center">Actualizar</h2>
-					<form class="px-5" >
-						<div class="form-group">
-							<label for="name" class=" text-white control-label">Nombre</label>
-							<input type="text" name="name" id="name" 
-							[(ngModel)]="model2.name" placeholder="nombre" class="form-control">
-						</div>
+    <div clas="col-6 ">
+      <div class="pl-5">
+        <h2 class="display-4 pb-5">Clientes Registrados</h2>
+        <table class="table table-bordered ">
+          <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>Apellidos</th>
+              <th>Acciones</th>
+              <th>Fecha</th>
 
-						<div class="form-group">
-							<label for="apellidos" class=" text-white control-label">Apellidos</label>
-							<input type="text" name="apellidos" id="apellidos" 
-							[(ngModel)]="model2.apellidos" placeholder="apellidos"class="form-control" >
-						</div>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let Empleado of Empleados; let i =index ">
+              <td>{{Empleado.name}}</td>
+			  <td>{{Empleado.apellidos}}</td>
+			  <!-- uso de pipes -->
+              <td>{{Empleado.porcentaje | percent}}</td>
+              <td class="clearfix">
+                <a type="button" class="btn btn-outline-primary float-left" (click)="editEmpleado(i)"><i class="fas fa-upload"></i></a>
+                <a type="button" class="btn btn-outline-danger float-right" (click)="deleEmpleado(i)"><i class="fas fa-trash-alt"></i></a>
 
-						<div class="form-group">
-							<button type="submit" (click)="updateEmpleado()" class="btn btn-info btn-block">actualizar</button>
-							
-						</div>			
-					</form>
+              </td>
+            </tr>
+          </tbody>
+        </table>
 
-			</div>
-	  </div>
-
+      </div>
+    </div>
 
 
-	</div>
+    <div class=" col-6 x-5 ">
+      <div class="" [hidden]="ocultarActu">
+        <h2 class="display-4 pb-5 text-center">Actualizar</h2>
+        <form class="px-5">
+          <div class="form-group">
+            <label for="name" class=" text-white control-label">Nombre</label>
+            <input type="text" name="name" id="name" [(ngModel)]="model2.name" placeholder="nombre" class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label for="apellidos" class=" text-white control-label">Apellidos</label>
+            <input type="text" name="apellidos" id="apellidos" [(ngModel)]="model2.apellidos" placeholder="apellidos"
+              class="form-control">
+          </div>
+
+          <div class="form-group">
+            <button type="submit" (click)="updateEmpleado()" class="btn btn-info btn-block">actualizar</button>
+
+          </div>
+        </form>
+
+      </div>
+    </div>
+
+
+
+  </div>
 </div>
 
 
