--- a/src/app/pages/hobies/hobies.component.html
+++ b/src/app/pages/hobies/hobies.component.html
@@ -1,39 +1,40 @@
-
-
-<button  class="btn btn-outline-success mt-2" (click)= " ocular()" >{{mostrar ? 'ocular' : 'mostrar'}}</button>
+<button class="btn btn-outline-success mt-2" (click)=" ocular()">{{mostrar ? 'ocular' : 'mostrar'}}</button>
 
 <div class="container p-5 ">
-    
 
 
-    <div *ngIf="mostrar" class=" jumbotron-fluid bg-success">
 
-      <h3 class="display-3 active">hobbies !</h3>
-      <ul >
-        <li *ngFor= " let hobbies of hobby" class="m-auto "> <span>{{hobbies}} </span></li>
+  <div *ngIf="mostrar" class=" jumbotron-fluid bg-success">
 
-      </ul>
+    <h3 class="display-3 active">hobbies !</h3>
+    <ul>
+      <li *ngFor=" let hobbies of hobby" class="m-auto "> <span>{{hobbies}} </span></li>
 
- 
+    </ul>
 
-      <div>
-         
+
+
+    <div>
+
       <form (submit)="formulary(datos)">
 
-          <label for="name">Name</label>
-          <input #datos type="text" name="id" placeholder="nombre">
+        <label for="name">Name</label>
+        <input #datos type="text" name="id" placeholder="nombre">
 
-          <button type="submit" >enviar</button>
+        <button type="submit">enviar</button>
       </form>
-       
-      </div>
 
-   
-     
     </div>
 
 
 
+  </div>
 
+  <div m-5 [ngSwitch]="tab">
+    <p *ngSwitchCase="1">ejemplo con ngSwitch</p>
+    <p *ngSwitchCase="2">tab 2</p>
+    <p *ngSwitchDefault>Nada para mostrar</p>
+
+  </div>
 
 </div>
