--- a/src/app/pages/hobies/hobies.component.html
+++ b/src/app/pages/hobies/hobies.component.html
@@ -31,7 +31,7 @@
   </div>
 
   <div m-5 [ngSwitch]="tab">
-    <p *ngSwitchCase="1">ejemplo con ngSwitch</p>
+    <p *ngSwitchCase="1">{{title}}</p>
     <p *ngSwitchCase="2">tab 2</p>
     <p *ngSwitchDefault>Nada para mostrar</p>
 
